# scp-game-framework

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE.md  README.md  ay.txt  build-linux.sh  my-setup-linux.sh  readme.md  setup-linux.sh  setup-windows.bat
.github/workflows/: build.yml
cmake/: FindGLFW.cmake
cmake-modules/: FindGLFW.cmake
core/: CMakeLists.txt  dummy-source.cpp
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
docs/: index.html
include/: CMakeLists.txt
include/scp/: CMakeLists.txt  Input.hpp  Scene.hpp  Window.hpp  core-pch.hpp  dummy-header.hpp  events.hpp  input.hpp  math.hpp  scp.hpp  window.hpp
include/scp/graphics/: API.hpp  CMakeLists.txt  Renderer2D.hpp  Sprite.hpp  VertexLayout.hpp  api.hpp  opengl.hpp  pch.hpp
include/scp/graphics/opengl/: CMakeLists.txt  ElementBuffer.hpp  Renderer2D.hpp  Shader.hpp  Texture2D.hpp  VertexArray.hpp  VertexBuffer.hpp
include/scp/math/: CMakeLists.txt  Matrix4.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  projections.hpp  transformations.hpp
include/scp/physics/: AxisAlignedBoxCollider.hpp  CMakeLists.txt  pch.hpp
include/scp/ui/: Button.hpp
include/scp/utils/: AssetCollection.hpp  CMakeLists.txt  file-utils.hpp  pch.hpp  string_utils.hpp  time-utils.hpp
includes/scp/: CMakeLists.txt  hello.hpp
shaders/: opengl-graphics-test.glsl  opengl-math-test.glsl  opengl_renderer2d.glsl  renderer2d.glsl
sources/: CMakeLists.txt
sources/scp-game-framework-core/: CMakeLists.txt  hello.cpp  input.cpp  pch.hpp  window.cpp
src/: CMakeLists.txt
src/asset-archiver/: CMakeLists.txt  asset-archiver.cpp
src/core/: CMakeLists.txt  Input.cpp  Scene.cpp  Window.cpp
src/graphics/: CMakeLists.txt  Renderer2D.cpp  Sprite.cpp  dummy-source.cpp  opengl.cpp
src/graphics/opengl/: CMakeLists.txt  ElementBuffer.cpp  Renderer2D.cpp  Shader.cpp  Texture2D.cpp  VertexArray.cpp  VertexBuffer.cpp
src/math/: CMakeLists.txt
src/physics/: AxisAlignedBoxCollider.cpp  CMakeLists.txt
src/ui/: Button.cpp  CMakeLists.txt
src/utils/: AssetCollection.cpp  CMakeLists.txt  file-utils.cpp  string_utils.cpp  time-utils.cpp
tests/: CMakeLists.txt
tests/axis-aligned-collision-test/: CMakeLists.txt  axis-aligned-collision-test.cpp
tests/basic-window-test/: CMakeLists.txt  basic-window-test.cpp
tests/button-test/: CMakeLists.txt  button-test.cpp
tests/dummy-test/: CMakeLists.txt  dummy-test.cpp
tests/event-test/: CMakeLists.txt  event-test.cpp
tests/input-polling-test/: CMakeLists.txt  input-polling-test.cpp
tests/input-test/: CMakeLists.txt  input-test.cpp
tests/opengl-2d-renderer-test/: CMakeLists.txt  opengl-2d-renderer-test.cpp
tests/opengl-debug-test/: CMakeLists.txt  opengl-debug-test.cpp
tests/opengl-element-buffer-test/: CMakeLists.txt  opengl-element-buffer-test.cpp
tests/opengl-graphics-test/: CMakeLists.txt  opengl-graphics-test.cpp
tests/opengl-math-test/: CMakeLists.txt  opengl-math-test.cpp
