add_subdirectory("axis-aligned-collision-test")
add_subdirectory(dummy-test)
add_subdirectory(basic-window-test)
add_subdirectory(button-test)
add_subdirectory(event-test)
add_subdirectory(input-polling-test)
add_subdirectory(opengl-2d-renderer-test)
add_subdirectory(opengl-debug-test)
add_subdirectory(opengl-element-buffer-test)
add_subdirectory(opengl-graphics-test)
add_subdirectory(opengl-math-test)